--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
   database:
     image: postgres:latest
     environment:
-      - POSTGRES_PASSWORD=root
+      - POSTGRES_PASSWORD=1453
       - POSTGRES_USER=postgres
       - POSTGRES_DB=discovery_country
     volumes:
