--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/discovery_country
-    username: postgres
-    password: root
+    url: ${DB_URL}
+    username:  ${DB_USERNAME}
+    password: ${DB_PASSWORD}
 
   jpa:
     database: postgresql
