--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     url: ${DB_URL}
-    username:  ${DB_USERNAME}
+    username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
 
   jpa:
@@ -12,3 +12,5 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+  liquibase:
+    change-log: liquibase/change-log-master.yaml
