change table column from liquibase

--- a/src/main/resources/liquibase/1.0/1.0.0.yaml
+++ b/src/main/resources/liquibase/1.0/1.0.0.yaml
@@ -39,105 +39,85 @@ databaseChangeLog:
                   constraints:
                     primaryKey: true
                     nullable: false
-
               - column:
                   name: name
                   type: VARCHAR(255)
                   constraints:
                     nullable: false
-
               - column:
                   name: price
                   type: DOUBLE
                   constraints:
                     nullable: false
-
               - column:
                   name: viewed
                   type: BIGINT
-
               - column:
                   name: like_count
                   type: BIGINT
-
+                  defaultValueNumeric: 0
               - column:
                   name: average_rating
                   type: DOUBLE
                   defaultValueNumeric: 0.0
-
               - column:
                   name: rating_count
-                  type: INTEGER
+                  type: INT
                   defaultValueNumeric: 0
-
               - column:
                   name: activity_status
                   type: VARCHAR(255)
-
               - column:
                   name: map_url
                   type: VARCHAR(255)
-
               - column:
                   name: latitude
                   type: DOUBLE
                   constraints:
                     nullable: false
-
               - column:
                   name: longitude
                   type: DOUBLE
                   constraints:
                     nullable: false
-
               - column:
                   name: description
                   type: TEXT
-
               - column:
                   name: deleted
                   type: BOOLEAN
                   defaultValueBoolean: false
-
               - column:
                   name: start_date
                   type: TIMESTAMP
                   constraints:
                     nullable: false
-
               - column:
                   name: end_date
                   type: TIMESTAMP
                   constraints:
                     nullable: false
-
               - column:
                   name: registration_deadline
                   type: TIMESTAMP
                   constraints:
                     nullable: false
-
               - column:
                   name: contact
                   type: VARCHAR(255)
                   constraints:
                     nullable: false
-
               - column:
                   name: requirements
                   type: TEXT
-
               - column:
                   name: number_of_people
-                  type: INTEGER
+                  type: INT
                   constraints:
                     nullable: false
-
               - column:
                   name: activity_category_id
                   type: BIGINT
-                  constraints:
-                    nullable: false
   - changeSet:
       id: 3
       author: ${AUTHOR}
