--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,6 @@ spring:
     database: postgresql
     show-sql: true
     hibernate:
-      ddl-auto: none
-  liquibase:
-    change-log: liquibase/change-log-master.yaml
+      ddl-auto: update
+#  liquibase:
+#    change-log: liquibase/change-log-master.yaml
