--- a/src/main/resources/liquibase/1.0/1.0.1.yaml
+++ b/src/main/resources/liquibase/1.0/1.0.1.yaml
@@ -151,7 +151,7 @@ databaseChangeLog:
                   type: BOOLEAN
 
               - column:
-                  name: scenicSpot_id
+                  name: scenic_spot_id
                   type: BIGINT
 
               - column:
@@ -159,7 +159,7 @@ databaseChangeLog:
                   type: BIGINT
 
               - column:
-                  name: homeHotel_id
+                  name: home_hotel_id
                   type: BIGINT
 
               - column:
