--- a/src/main/resources/liquibase/1.0/1.0.2.yaml
+++ b/src/main/resources/liquibase/1.0/1.0.2.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 10
+      id: 9
       author: ${AUTHOR}
       changes:
         - createTable:
@@ -50,7 +50,7 @@ databaseChangeLog:
                   name: user_id
                   type: BIGINT
   - changeSet:
-      id: 11
+      id: 10
       author: ${AUTHOR}
       changes:
         - createTable:
@@ -95,10 +95,14 @@ databaseChangeLog:
                   type: BOOLEAN
 
               - column:
+                  name: deleted
+                  type: BOOLEAN
+
+              - column:
                   name: home_hotel_id
                   type: BIGINT
   - changeSet:
-      id: 12
+      id: 11
       author: ${AUTHOR}
       changes:
         - createTable:
@@ -151,10 +155,10 @@ databaseChangeLog:
 
               - column:
                   name: rating_count
-                  type: INTEGER
-                  defaultValue: 0
+                  type: INT
+
   - changeSet:
-      id: 13
+      id: 12
       author: ${AUTHOR}
       changes:
         - createTable:
@@ -190,9 +194,9 @@ databaseChangeLog:
                   name: password
                   type: VARCHAR(255)
 
-              - column:
-                  name: phone_number
-                  type: VARCHAR(15)
+#              - column:
+#                  name: phone_number
+#                  type: VARCHAR(15)
 
               - column:
                   name: surname
@@ -230,11 +234,9 @@ databaseChangeLog:
                   name: email_verified
                   type: BOOLEAN
 
-              - column:
-                  name: verification_token
-                  type: VARCHAR(255)
+
   - changeSet:
-      id: 14
+      id: 13
       author: ${AUTHOR}
       changes:
         - createTable:
